--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Harshit Bhalani Portfolio Website</title>
+    <title>Responsive Portfolio Website</title>
 </head>
 
 <body>
@@ -105,7 +105,7 @@
                             -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
                                 <image class="home__blob-img" x="18" y="20" width="20"
-                                    xlink:href="assets/img/w44.png" />
+                                    xlink:href="assets/img/W44.png" />
                             </g>
                         </svg>
                     </div>
