--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                     </a> -->
                 </div>
 
-                <p class="footer__copy">Copyright © 2023, All Right Reserved Harshit Bhalani </p>
+                <p class="footer__copy">Copyright © 2023, All Right Reserved <br>Created By Harshit Bhalani </p>
             </div>
         </div>
         <script>
