--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                             129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                             -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                                <image class="home__blob-img" x="18" y="20" width="20" xlink:href="assets/img/W44.png" />
+                                <image class="home__blob-img" x="18" y="20" width="20"
+                                    xlink:href="assets/img/W44.png" />
                             </g>
                         </svg>
                     </div>
@@ -145,7 +146,8 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        Hello, I am Harshit Bhalani. I am excited to bring my skills and experience to a new opportunity and deliver quality work.
+                        Hello, I am Harshit Bhalani. I am excited to bring my skills and experience to a new opportunity
+                        and deliver quality work.
                         With over 1 year of experience, I have completed 8+ projects and worked for 2+ companies. My
                         technical skills include proficiency in HTML5, CSS3, and JavaScript. I am also familiar with
                         Bootstrap, and jQuery, and have knowledge of AJAX, responsive design, cross-browser
@@ -828,10 +830,10 @@
                             Contact Me
                             <i class="uil uil-message button__icon .project__icon"></i>
                         </a>
-                    <!-- </div>
+                        <!-- </div>
                     <img src="assets/img/30%.png" alt="" class="project__img">
                 </div> -->
-            </div>
+                    </div>
         </section>
 
         <!--==================== TESTIMONIAL ====================-->
@@ -975,7 +977,7 @@
 
                     <div>
 
-                        <button type="submit" style="border:none"><a class="button button--flex">
+                        <button type="submit" style="border-radius:0.9rem;border:none;"><a class="button button--flex">
                                 Send Message
                                 <i class="uil uil-message button__icon"></i>
                             </a></button>
