--- a/index.html
+++ b/index.html
@@ -958,20 +958,20 @@
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input" name="name" required>
+                            <input type="text" class="contact__input" name="name" autocomplete="off" required>
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input" name="email" required>
+                            <input type="email" class="contact__input" name="email" autocomplete="off" required>
                         </div>
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Project</label>
-                        <input type="text" class="contact__input" name="project" required>
+                        <input type="text" class="contact__input" name="project" autocomplete="off" required>
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea id="" cols="0" rows="7" class="contact__input" name="message" required></textarea>
+                        <textarea id="" cols="0" rows="7" class="contact__input" name="message" autocomplete="off" required></textarea>
                         <!-- <input type="text" class="contact__input" name="message" required> -->
                     </div>
 
