--- a/index.html
+++ b/index.html
@@ -656,6 +656,29 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img//Dream_institute.png" alt="" class="portfolio__img"
+                            style="border: 1px solid black;">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Dream Institute Website</h3>
+                            <p class="portfolio__description">
+                                I have created a Dream Institute website. a testament to my web development expertise.
+                                This captivating platform offers a seamless user experience, highlighting the full
+                                potential of my skills. With essential pages like Home, About, Courses, and Contact,
+                                visitors can explore the institute's mission, values, and diverse course offerings.
+                                Intuitive navigation enables effortless engagement, allowing users to delve into the
+                                institute's educational vision and connect with ease.
+                                prowess.
+                            </p>
+                            <a href="https://harshitbhalani.github.io/Dream_Institute_Website.github.io/" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 3 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/Friends_Portfolio.png" alt="" class="portfolio__img"
                             style="border: 1px solid black;">
 
@@ -675,7 +698,7 @@
                             </a>
                         </div>
                     </div>
-                    <!--==================== PORTFOLIO 3 ====================-->
+                    <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/Harshit_portfolio.png" alt="" class="portfolio__img"
                             style="border: 1px solid black;">
@@ -697,7 +720,7 @@
                             </a>
                         </div>
                     </div>
-
+                    <!--==================== PORTFOLIO 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/Digital_profile.png" alt="" class="portfolio__img"
                             style="border: 1px solid black;">
@@ -718,7 +741,7 @@
                             </a>
                         </div>
                     </div>
-
+                    <!--==================== PORTFOLIO 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/gredient_color.png" alt="" class="portfolio__img"
                             style="border: 1px solid black;">
@@ -741,7 +764,7 @@
                             </a>
                         </div>
                     </div>
-
+                    <!--==================== PORTFOLIO 7 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/colorhub.png" alt="" class="portfolio__img"
                             style="border: 1px solid black;">
@@ -763,7 +786,7 @@
                             </a>
                         </div>
                     </div>
-
+                    <!--==================== PORTFOLIO 8 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/color_pellete.png" alt="" class="portfolio__img"
                             style="border: 1px solid black;">
@@ -784,7 +807,7 @@
                             </a>
                         </div>
                     </div>
-
+                    <!--==================== PORTFOLIO 9 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/todo.png" alt="" class="portfolio__img" style="border: 1px solid black;">
 
@@ -971,7 +994,8 @@
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea id="" cols="0" rows="7" class="contact__input" name="message" autocomplete="off" required></textarea>
+                        <textarea id="" cols="0" rows="7" class="contact__input" name="message" autocomplete="off"
+                            required></textarea>
                         <!-- <input type="text" class="contact__input" name="message" required> -->
                     </div>
 
