--- a/index.html
+++ b/index.html
@@ -634,8 +634,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/BH_digital_solutions.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                        <img src="assets/img/BH_digital_solutions.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Digital Marketing Website</h3>
@@ -656,8 +655,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img//Dream_institute.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                        <img src="assets/img//Dream_institute.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Dream Institute Website</h3>
@@ -671,7 +669,7 @@
                                 prowess.
                             </p>
                             <a href="https://harshitbhalani.github.io/Dream_Institute_Website.github.io/" target="_blank"
-                                class="button button--flex button--small portfolio__button">
+                                    class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -679,8 +677,7 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Friends_Portfolio.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                        <img src="assets/img/Friends_Portfolio.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Kathan Bhatt Portfolio Website</h3>
@@ -701,7 +698,7 @@
                     <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/Harshit_portfolio.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                            >
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">My First Personal Portfolio</h3>
@@ -722,8 +719,8 @@
                     </div>
                     <!--==================== PORTFOLIO 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Digital_profile.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                        <img src="assets/img/HARSHIT_PROFILE.png" alt="" class="portfolio__img"
+                            >
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">My Digital Profile</h3>
@@ -743,8 +740,8 @@
                     </div>
                     <!--==================== PORTFOLIO 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/gredient_color.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                        <img src="assets/img/GRADIENT COLOR CODE GENERATOR.png" alt="" class="portfolio__img"
+                            >
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Gredient Color Code Generator</h3>
@@ -765,9 +762,9 @@
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 7 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
+                    <!-- <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/colorhub.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                            >
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Color Hub / Color Library</h3>
@@ -785,11 +782,11 @@
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!--==================== PORTFOLIO 8 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
+                    <!-- <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/color_pellete.png" alt="" class="portfolio__img"
-                            style="border: 1px solid black;">
+                            >
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Color Palette Generator</h3>
@@ -806,10 +803,10 @@
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!--==================== PORTFOLIO 9 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/todo.png" alt="" class="portfolio__img" style="border: 1px solid black;">
+                        <img src="assets/img/TODO-LIST.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">TO-Do List</h3>
