--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/BH_digital_solutions.png" alt="" class="portfolio__img">
+                        <img src="assets/img/BH_DIGITAL_SOLUTIONS.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Digital Marketing Website</h3>
@@ -655,7 +655,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img//Dream_institute.png" alt="" class="portfolio__img">
+                        <img src="assets/img/DREAM_INSTITUTE.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Dream Institute Website</h3>
@@ -677,7 +677,7 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Friends_Portfolio.png" alt="" class="portfolio__img">
+                        <img src="assets/img/FRIENDS_PORTFOLIO.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Kathan Bhatt Portfolio Website</h3>
@@ -697,7 +697,7 @@
                     </div>
                     <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Harshit_portfolio.png" alt="" class="portfolio__img">
+                        <img src="assets/img/HARSHIT_PORTFOLIO.pngg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">My First Personal Portfolio</h3>
