--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
 
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
-            <div class="section__title">Contact Me</div>
+            <div class="section__title" style="color:black;">Contact Me</div>
             <span class="section__subtitle">Get in touch</span>
 
             <div class="contact__container container grid">
@@ -1019,7 +1019,7 @@
                         <a href="#services" class="footer__link">Services</a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="footer__link">Potfolio</a>
+                        <a href="#portfolio" class="footer__link">Portfolio</a>
                     </li>
                     <li>
                         <a href="#contact" class="footer__link">Contactme</a>
