--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                     </div>
                     <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/HARSHIT_PORTFOLIO.pngg" alt="" class="portfolio__img">
+                        <img src="assets/img/HARSHIT_PORTFOLIO.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">My First Personal Portfolio</h3>
