--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 
     <title>Harshit Bhalani Portfolio Website</title>
+    <script src="//code.tidio.co/baaesdwjva7ie63swaafiqkqvj8g4ikn.js" async></script>
 </head>
 
 <body>
