--- a/index.html
+++ b/index.html
@@ -15,7 +15,34 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 
     <title>Harshit Bhalani Portfolio Website</title>
-    
+    <!-- Start of Async Drift Code -->
+    <script>
+        "use strict";
+
+        !function () {
+            var t = window.driftt = window.drift = window.driftt || [];
+            if (!t.init) {
+                if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+                t.invoked = !0, t.methods = ["identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on"],
+                    t.factory = function (e) {
+                        return function () {
+                            var n = Array.prototype.slice.call(arguments);
+                            return n.unshift(e), t.push(n), t;
+                        };
+                    }, t.methods.forEach(function (e) {
+                        t[e] = t.factory(e);
+                    }), t.load = function (t) {
+                        var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+                        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+                        var i = document.getElementsByTagName("script")[0];
+                        i.parentNode.insertBefore(o, i);
+                    };
+            }
+        }();
+        drift.SNIPPET_VERSION = '0.3.1';
+        drift.load('k6df4aav3wan');
+    </script>
+    <!-- End of Async Drift Code -->
 </head>
 
 <body>
@@ -654,6 +681,30 @@
                             </a>
                         </div>
                     </div>
+
+
+
+                    <!--==================== PORTFOLIO 2 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/HIDDENVIBES.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Hidden Vibes Website</h3>
+                            <p class="portfolio__description">
+                                I am proud to showcase my latest project, "Hidden Vibes," a dynamic e-commerce platform that specializes in providing top-notch bike shields through a seamless online shopping experience. Integrated with the innovative Sepal Shield brand, this website serves as a hub for bike enthusiasts seeking premium protective solutions. With a meticulously crafted website architecture, I have developed multiple pages that offer comprehensive information about the products, seamless integration with WhatsApp and various social media platforms,
+                            </p>
+                            <a href="https://hiddenvibes.in"
+                                target="_blank" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 2 ====================-->
+
+
+
+
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/DREAM_INSTITUTE.png" alt="" class="portfolio__img">
