--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         <i class="uil uil-graduation-cap qualification__icon"></i> Education
                     </div>
                     <div class="qualification__button button--flex" data-target="#work">
-                        <i class="uil uil-briefcase-alt qualification__icon"></i> Work
+                        <i class="uil uil-briefcase-alt qualification__icon"></i>Freelancing Work
                     </div>
                 </div>
                 <div class="qualification__sections">
@@ -478,10 +478,10 @@
                         <!-- 1 -->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Frontend Developer</h3>
-                                <span class="qualification__subtitle">BH Digital Solutions - Ahmedabad</span>
+                                <h3 class="qualification__title">Client Portfolio Website</h3>
+                                <span class="qualification__subtitle">Ahmedabad</span>
                                 <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i> 2023 - Currently Working
+                                    <i class="uil uil-calendar-alt"></i> 2023 - Feb
                                 </div>
                             </div>
 
@@ -492,7 +492,7 @@
                         </div>
 
                         <!-- 2 -->
-                        <!-- <div class="qualification__data">
+                        <div class="qualification__data">
                             <div></div>
 
                             <div>
@@ -501,29 +501,29 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Frontend Developer</h3>
-                                <span class="qualification__subtitle">Apple Inc - Spain</span>
+                                <h3 class="qualification__title">Digital Marketing Website</h3>
+                                <span class="qualification__subtitle">Ahmedabad</span>
                                 <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i> 2018 - 2020
+                                    <i class="uil uil-calendar-alt"></i> 2023- March
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
 
                         <!-- 3 -->
-                        <!-- <div class="qualification__data">
+                        <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Ui Designer</h3>
-                                <span class="qualification__subtitle">Figma - Spain</span>
+                                <h3 class="qualification__title">Hidden Vibes Website</h3>
+                                <span class="qualification__subtitle">Ahmedabad</span>
                                 <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i> 2017 - 2019
+                                    <i class="uil uil-calendar-alt"></i> 2023 - July
                                 </div>
                             </div>
 
                             <div>
-                                <span class="qualification__rounder"></span> -->
-                        <!-- <span class="qualification__line"></span> -->
-                        <!-- </div>
-                        </div> -->
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -662,7 +662,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/BH_DIGITAL_SOLUTIONS.png" alt="" class="portfolio__img">
+                        <img src="assets/img/BH_DIGITAL_SOLUTIONS.png" alt="" class="portfolio__img" >
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Digital Marketing Website</h3>
@@ -691,10 +691,16 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Hidden Vibes Website</h3>
                             <p class="portfolio__description">
-                                I am proud to showcase my latest project, "Hidden Vibes," a dynamic e-commerce platform that specializes in providing top-notch bike shields through a seamless online shopping experience. Integrated with the innovative Sepal Shield brand, this website serves as a hub for bike enthusiasts seeking premium protective solutions. With a meticulously crafted website architecture, I have developed multiple pages that offer comprehensive information about the products, seamless integration with WhatsApp and various social media platforms,
+                                I am proud to showcase my latest project, "Hidden Vibes," a dynamic e-commerce platform
+                                that specializes in providing top-notch bike shields through a seamless online shopping
+                                experience. Integrated with the innovative Sepal Shield brand, this website serves as a
+                                hub for bike enthusiasts seeking premium protective solutions. With a meticulously
+                                crafted website architecture, I have developed multiple pages that offer comprehensive
+                                information about the products, seamless integration with WhatsApp and various social
+                                media platforms,
                             </p>
-                            <a href="https://hiddenvibes.in"
-                                target="_blank" class="button button--flex button--small portfolio__button">
+                            <a href="https://hiddenvibes.in" target="_blank"
+                                class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -738,7 +744,7 @@
                                 skills in a visually appealing and mobile-friendly way. I followed a plan to build the
                                 website and leveraged my knowledge of web technologies and UI/UX design to deliver
                                 quality work. It is a great example of my proficiency in HTML5, CSS3, and JavaScript, as
-                                well as my experience with frameworks like ootstrap and jQuery.
+                                well as my experience with frameworks like bootstrap and jQuery.
                             </p>
                             <a href="https://harshitbhalani.github.io/Kathan_Bhatt_Portfolio.github.io/" target="_blank"
                                 class="button button--flex button--small portfolio__button">
