--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
                     </div>
                 </div>
 
-                <form action="https://formspree.io/f/mleyrvyo" method="POST" class=".contact__form grid">
+                <form action="https://formspree.io/f/mbjvgjpo" method="POST" class=".contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
