--- a/index.html
+++ b/index.html
@@ -439,20 +439,20 @@
                         </div>
 
                         <!-- 3 -->
-                        <!-- <div class="qualification__data">
+                        <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Web Development</h3>
-                                <span class="qualification__subtitle">Peru - Institute</span>
+                                <h3 class="qualification__title">Currntly Working On Freelancing Projects</h3>
+                                <!-- <span class="qualification__subtitle">Peru - Institute</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i> 2017 - 2019
-                                </div>
+                                </div> -->
                             </div>
 
                             <div>
                                 <span class="qualification__rounder"></span>
                                 <span class="qualification__line"></span>
                             </div>
-                        </div> -->
+                        </div>
 
                         <!-- 4 -->
                         <!-- <div class="qualification__data">
@@ -662,7 +662,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/BH_DIGITAL_SOLUTIONS.png" alt="" class="portfolio__img" >
+                        <img src="assets/img/BH_DIGITAL_SOLUTIONS.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Digital Marketing Website</h3>
@@ -1153,6 +1153,43 @@
             });
         });
     </script>
+
+    <!-- Read the Formbutton docs at formspree.io/formbutton/docs. See more examples at codepen.io/formspree -->
+    <!-- <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
+    <script> -->
+    <!-- /* paste this line in verbatim */ -->
+    <!-- window.formbutton = window.formbutton || function () { (formbutton.q = formbutton.q || []).push(arguments) }; -->
+    <!-- /* customize formbutton below*/ -->
+    <!-- formbutton("create", {
+            action: "https://formspree.io/f/mbjvgjpo",
+            title: "How can we help?",
+            fields: [
+                {
+                    type: "email",
+                    label: "Email:",
+                    name: "email",
+                    required: true,
+                    placeholder: "your@email.com"
+                },
+                {
+                    type: "textarea",
+                    label: "Message:",
+                    name: "message",
+                    placeholder: "What's on your mind?",
+                },
+                { type: "submit" }
+            ],
+            styles: {
+                title: {
+                    backgroundColor: "crimson",
+                    Color: "green"
+                },
+                button: {
+                    backgroundColor: "crimson"
+                }
+            }
+        }); -->
+    <!-- </script> -->
 </body>
 
 </html>
